login workflow completed

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
 <div class="hero-section bg-primary text-white text-center position-relative py-5">
   <div class="hero-bg-image"></div> <!-- This is the background image -->
 
-  <div class="hero-content position-relative">
+  <div class="hero-content position-relative d-flex-col align-items-center justify-content-center">
     <h1 class="fw-bold">Show Your Skills, Compete & Win!</h1>
     <p>Join the best competitions across colleges</p>
     <div class="d-flex justify-content-center mt-3 gap-3 flex-wrap">
