--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,7 +1,8 @@
 .hero-section {
   position: relative;
   overflow: hidden;
-  min-height: 350px;
+  // min-height: 350px;
+  min-height: 100dvh;
 }
 
 .hero-bg-image {
