--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -33,7 +33,7 @@
       <div class="dropdown">
         <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
           aria-expanded="false">
-          <i class="bi bi-person-circle me-1"></i> User
+          <i class="bi bi-person-circle me-1"></i> {{userService.loggedUserData?.email}}
         </button>
         <ul class="dropdown-menu dropdown-menu-end">
           <li><a class="dropdown-item" routerLink="/dashboard"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a></li>
